fixed more parameterized tests and updated them. placeholder to keep dir